--- a/exercises.ipynb
+++ b/exercises.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,20 +60,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = torch.tensor([1, 2, 3, 4, 5], dtype=torch.float32)\n",
+    "x = torch.tensor([1, 2, 3, 4, 5])\n",
     "\n",
     "def exercise_2(x) -> tuple:\n",
     "    # all the output and gradients are tensors\n",
     "    x_len = len(x)\n",
     "\n",
     "    torch.manual_seed(0) # must set seed=0 before random your weight\n",
+    "    x = x.to(dtype=torch.float32)\n",
     "    w = torch.randn(x_len, requires_grad=True)\n",
     "    b = torch.tensor(5.0, dtype=torch.float32, requires_grad=True)\n",
-    "    fx = torch.dot(w,x) + b\n",
+    "    fx = torch.dot(w, x) + b\n",
     "    fx.backward()\n",
     "    return (fx, w.grad)\n",
     "    \n",
